[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This library provides anyhow::Error, a trait object based error type for easy 
# idiomatic error handling in Rust applications.
# https://crates.io/crates/anyhow
anyhow = "1.0"
home = "0.5"
serde_json = "1.0"
# Parse command line arguments by defining a struct. 
# https://crates.io/crates/structopt/0.3.26
structopt = "0.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

# Serde is a framework for serializing and deserializing Rust data structures 
# efficiently and generically.
# https://crates.io/crates/serde
[dependencies.serde]
features = ["derive"]
version = "1.0"

